@@ -1,3 +1,8 @@
+17/12/16 Julien Dutheil
+* new function SiteTools::isDoubleton
+* new function SiteTools::getMinoralleleFrequency
+* new function SequenceTools::areSequencesIdentical
+
 07/03/16 Julien Dutheil
 * Much faster getCompleteSites (does not check for positions)
 
